--- a/Vidly2/Views/Customer/Index.cshtml
+++ b/Vidly2/Views/Customer/Index.cshtml
@@ -16,13 +16,15 @@ else
     <table>
         <thead>
         <tr>
-            <td>Customer</td>
+            <th>Customer</th>
+            <th>Discount</th>
         </tr>
         </thead>
         <tbody>
         @foreach (Customer cust in @Model)
         {
-            <tr><td>@Html.ActionLink(cust.Name,"Details","Customer",new {id=cust.Id},null)</td></tr>
+            <tr><td>@Html.ActionLink(cust.Name, "Details", "Customer", new {id = cust.Id}, null)</td></tr>
+            <tr><td>@cust.MembershipType.DiscountRate</td></tr>
         }
 
         </tbody>
