--- a/Vidly2/Views/Customer/Index.cshtml
+++ b/Vidly2/Views/Customer/Index.cshtml
@@ -13,18 +13,21 @@
 }
 else
 {
-    <table>
+    <table class="table table-bordered table-hover">
         <thead>
         <tr>
             <th>Customer</th>
-            <th>Discount</th>
+            <th>Membership Type</th>
         </tr>
         </thead>
         <tbody>
         @foreach (Customer cust in @Model)
         {
-            <tr><td>@Html.ActionLink(cust.Name, "Details", "Customer", new {id = cust.Id}, null)</td></tr>
-            <tr><td>@cust.MembershipType.DiscountRate</td></tr>
+            <tr>
+                <td>@Html.ActionLink(cust.Name, "Edit", "Customer", new {id = cust.Id}, null)</td>
+                <td>@cust.MembershipType.Name</td>
+            </tr>
+           
         }
 
         </tbody>
